--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,27 @@
     <groupId>chess</groupId>
     <artifactId>com.example.game</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
-        <!--<java.version>1.8</java.version>-->
-        <!--<dropwizard.version>0.9.2</dropwizard.version>-->
         <junit.version>4.12</junit.version>
-        <lombok.version>1.16.6</lombok.version>
-        <!--<commons-collections.version>3.2.2</commons-collections.version>-->
-        <guice.version>4.1.0</guice.version>
+        <lombok.version>1.18.2</lombok.version>
+        <guice.version>4.2.1</guice.version>
         <mockito-all.version>1.10.19</mockito-all.version>
-        <!--<apache-commons.version>3.4</apache-commons.version>-->
-        <!--<jackson.version>2.7.4</jackson.version>-->
-        <!--<jdbi.version>2.77</jdbi.version>-->
-        <!--<mysql-connector.version>5.1.26</mysql-connector.version>-->
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+
     </properties>
 
     <dependencies>
